# steps

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  databot  db.env  docker-compose.yaml  docker-compose.yml  example.env  load_env.sh  pyproject.toml
app/: models.py
backend/: alembic.ini  config_reader.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_02_25_1902-fdd233e0b38f_initial.py
backend/db/: __init__.py  example.py
database/migrations/: env.py
src/: data.json  db_data.py  dependencies.py  drop_db_skill.py
src/bot/: data.py  databot  handlers.py  main.py  utils.py
src/config/: settings.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2025_02_26_1242-cdf4e2cb7ba7_init.py  2025_03_04_1310-8678804ec362_initial.py  2025_03_04_1323-71c80f084a54_initial.py  2025_03_04_1457-7ef17305d1d6_base_tables.py  2025_03_05_1720-8ee613b7c0df_base_tables.py  2025_04_04_2144-76df7d929962_change_string_to_text.py
src/docker/: Dockerfile.bot
src/models/database/: models.py
src/models/domain/: models.py
src/repos/: base.py  child.py  diagnosis.py  skill.py  user.py
src/services/: child_service.py  diagnosis_service.py  recommendation_service.py  user_service.py
src/tests/: conftest.py  seed_data.py  test_helpers.py
src/tests/repos/: test_child_repo.py  test_diagnosis_repo.py  test_skill_repo.py  test_user_repo.py
src/tests/services/: test_child_service.py  test_diagnosis_service.py  test_recommendation_service.py  test_user_service.py
tests/: test_db.py
