[project]
name = "gh-steps"
version = "0.1.0"
description = "Благотворительный проект."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.8",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.8.0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[tool.ruff]
include = ["src/**/*.py"]
extend-exclude = ["src/database/migrations/*.py"]

[tool.ruff.lint]
select = ["I", "UP", "B", "A"]
